# pixelboard

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md  vcpkg.json
include/: BoardRegion.h  BoardTypes.h  PixelBoard.h
include/pixelboard/: BoardRegion.h  BoardTypes.h  PixelBoard.h
include/server/: BoardServer.h  WorkerThread.h
include/websocket/: Client.h  ForwardDeclarations.h  Message.h  NetworkingTSCompatibility.h  Server.h  forward_decls.h
src/: BoardRegion.cpp  PixelBoard.cpp  main.cpp
src/pixelboard/: BoardRegion.cpp  CMakeLists.txt  PixelBoard.cpp
src/server/: BoardServer.cpp  CMakeLists.txt
src/websocket/: AsioImplementation.cpp  BeastImplementation.cpp  CMakeLists.txt  Client.cpp  HttpSession.cpp  HttpUtils.h  Listener.cpp  Message.cpp  Server.cpp  netts.h
web/: package-lock.json  package.json
web/src/: config.js
